fixed header alignment

--- a/source/_patterns/01-atoms/buttons/navigation-button/_navigation-button.scss
+++ b/source/_patterns/01-atoms/buttons/navigation-button/_navigation-button.scss
@@ -1,17 +1,17 @@
 .navigation-button {
   .menu-icon { // width of hamburger menu
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    position: absolute;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
+    // position: absolute;
     cursor: pointer;
     .menu-icon__wrapper {
       cursor: pointer;
       width: 54px;
       height: 48px;
-      align-self: flex-start;
-      right: 0;
-      z-index: 32;
+      // align-self: flex-start;
+      // right: 0;
+      // z-index: 32;
       // aligns entire button, move to parent
       // margin: 35px 60px;
 
@@ -32,7 +32,7 @@
       width: 40px;
       transition: all 0.5s cubic-bezier(0, 0.275, 0.125, 1);
       z-index: 100;
-      margin: 25px 0; 
+      margin: 25px 0;
 
       &:before, &:after { // top and bottom line in hamburger menu
         content: '';
