--- a/source/_patterns/02-molecules/branding/site-logo/_site-logo.scss
+++ b/source/_patterns/02-molecules/branding/site-logo/_site-logo.scss
@@ -1,4 +1,4 @@
-.site-logo {
+.logo {
   text-align: center;
   span {
     display: inline-block;
